MMA-7063 Refaktorerte kode
* Endret fra string concat i logging til innebygd formatting
* Fjernet ubrukt kode
* Logger størrelse på dokumentpakke og fingeravtrykk for feilanalyse